11 Fixed grid scaling issues on small devices

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -113,6 +113,13 @@ nav {
 	}
 }
 
+.grid-2-col img {
+	width: 100%;
+	height: auto;
+	max-width: 100%;
+	object-fit: cover;
+}
+
 .grid-item img {
 	width: 100%;
 	object-fit: cover;
